# celery-task-plus

./: .gitignore  LICENSE  MANIFEST.in  Makefile  Procfile.dev  README.rst  manage.py  setup.cfg  setup.py
celery_task_plus/: __init__.py  apps.py  patches.py  tasks.py
requirements/: dev.in  dev38.txt
test_project/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
test_project/test_app/: apps.py  tasks.py  tests.py
