[bumpversion]
commit = True
current_version = 0.0.0
tag = True
tag_name = {new_version}

[bumpversion:file:celery_task_plus/__init__.py]

[metadata]
name = celery-task-plus
version = attr: celery_task_plus.__version__
author = Nine More Minutes, Inc.
author_email = support@ninemoreminutes.com
description = Celery task enhancements to lock tasks and capture results.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = django, celery, task
license = BSD
url = https://github.com/ninemoreminutes/celery-task-plus/
project_urls =
	Documentation = https://github.com/ninemoreminutes/celery-task-plus/
	Source = https://github.com/ninemoreminutes/celery-task-plus/
	Tracker = https://github.com/ninemoreminutes/celery-task-plus/issues
classifiers =
	Development Status :: 2 - Pre-Alpha
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 2.2
	Framework :: Django :: 3.0
	Framework :: Django :: 3.1
	Framework :: Django :: 3.2
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Internet :: WWW/HTTP
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
packages = celery_task_plus
include_package_data = True
setup_requires =
	pytest-runner
	setuptools-twine
tests_require =
	django>=2.2
	pytest
	pytest-cov
	pytest-django
	pytest-flake8
install_requires =
	django>=2.2
	celery[redis]
	python-redis-lock

[check]
metadata = True
restructuredtext = True
strict = True

[clean]
all = True

[egg_info]
tag_build = .dev

[bdist_wheel]
universal = 1

[aliases]
dev_build = clean test egg_info sdist bdist_wheel twine_check
release_build = clean test egg_info -b "" sdist bdist_wheel twine_check
test = pytest
ship_it = release_build twine_upload

[pycodestyle]
ignore = E501
exclude = .git,.tox,build,dist

[flake8]
ignore = E501
exclude = .git,.tox,build,dist

[tool:pytest]
DJANGO_SETTINGS_MODULE = test_project.settings
python_files = test*.py
testpaths = celery_task_plus test_project
norecursedirs = .git .tox build dist
flake8-ignore = E501
addopts = --reuse-db --nomigrations --cache-clear --flake8 --cov celery_task_plus --cov-append --cov-report term-missing
